

1.1
- uses Minetest's built-in localization engine
- hidename.use_alpha setting enabled by default
- updated for Minetest 5.0 API


1.0